--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "angulargit1": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angulargit1"
+    }
+  },
+  "defaultProject": "angulargit1",
+  "cli": {
+    "analytics": "2e56c8f6-2df7-4914-b983-7684fc5b5fd9"
+  }
 }
